common/nexus-oss/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-oss
  namespace: hzp-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: envoy-gateway-system
      sectionName: http-listener
  hostnames:
    - "nexus.hzp.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dbzconnect-connect-api
          port: 8083
